--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
 
 				<!-- Header -->
 					<header id="header">
-						<div class="logo">
-							<span class="icon fa-gem"></span>
-						</div>
+						<!-- <div class="logo"> -->
+							<!--- <span class="icon fa-gem"></span> --->
+						<!-- </div> -->
 						<div class="content">
 							<div class="inner">
 								<h1>Anna Zink</h1>
-								<p>Welcome!</p>
+								<p>Principal Researcher</p>
+								<p>Center for Applied AI </p>
+								<p>University of Chicago </p>
 							</div>
 						</div>
 						<nav>
