--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>Anna Zink</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -25,9 +25,9 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Anna Zink</h1>
-								<p>Principal Researcher</p>
-								<p>Center for Applied AI </p>
-								<p>University of Chicago </p>
+								<p>Principal Researcher \n
+								Center for Applied AI \n
+								University of Chicago </p>
 							</div>
 						</div>
 						<nav>
@@ -47,22 +47,21 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<!-- <span class="image main"><img src="images/pic01.jpg" alt="" /></span> -->
 								<p>I am Principal Researcher at the Chicago Booth Center for Applied AI where I work on algorithmic bias in healthcare and other health policy questions. Check out my <a href="#research">research</a>.</p>
-								<p>background info</p>
 							</article>
 
 						<!-- Research -->
 							<article id="research">
 								<h2 class="major">Research</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
 <p>Research stuff.</p>
 							</article>
 
 						<!-- CV -->
 							<article id="cv">
 								<h2 class="major">CV</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<!-- <span class="image main"><img src="images/pic03.jpg" alt="" /></span> -->
 								<p>Insert cv.</p>
 							</article>
 
@@ -89,12 +88,12 @@
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form>
-								<ul class="icons">
+								<!-- <ul class="icons">
 									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
+								</ul> -->
 							</article>
 
 						<!-- Elements -->
