add profile pic

--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
 						<!-- <div class="logo"> -->
 							<!--- <span class="icon fa-gem"></span> --->
 						<!-- </div> -->
+						<span class="image main"><img src="images/profile_pic.jpeg" alt="" /> </span>
 						<div class="content">
 							<div class="inner">
 								<h1>Anna Zink</h1>
-								<p>Principal Researcher \n
-								Center for Applied AI \n
+								<p>Principal Researcher <br>
+								Center for Applied AI <br>
 								University of Chicago </p>
 							</div>
 						</div>
@@ -48,7 +49,7 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<!-- <span class="image main"><img src="images/pic01.jpg" alt="" /></span> -->
-								<p>I am Principal Researcher at the Chicago Booth Center for Applied AI where I work on algorithmic bias in healthcare and other health policy questions. Check out my <a href="#research">research</a>.</p>
+								<p>I am interested in algorithmic bias in healthcare and other health policy questions. Check out my <a href="#research">research</a>.</p>
 							</article>
 
 						<!-- Research -->
