adding research formatting

--- a/index.html
+++ b/index.html
@@ -56,13 +56,17 @@
 							<article id="research">
 								<h2 class="major">Research</h2>
 								<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
-<p>Select Publications</p>
-<p>Neprash HT, Zink A, Sheridan B, Hempstead K (2021). The Effect of Medicaid Expansion on Medicaid
+<p>SELECT PUBLICATIONS</p>
+<p>Neprash HT, <b>Zink A</b>, Sheridan B, Hempstead K (2021). The Effect of Medicaid Expansion on Medicaid
 	Participation, Payer Mix, and Labor Supply in Primary Care. Journal of Health Economics 80: 102541. <br>
-   Zink A and Rose S (2021). Identifying Undercompensated Groups Defined by Multiple Attributes in Risk Adjustment. BMJ Health & Care Informatics 28(1). <br>
-McGuire T, Zink A, Rose S (2021). Improving the Performance of Risk Adjustment Systems: Constrained Regressions, Reinsurance, and Variable Selection. Forthcoming in American Journal of Health Economics. <br>
-Zink A and Rose S (2020). Fair Regression for Health Care Spending. Biometrics 76(3): 973-982. <br>
-Barnett ML Gray J, Zink A and Jena AB (2017). Coupling Policymaking with Evaluation — The Case of the Opioid Crisis. New England Journal of Medicine 377: 2306-2309.  
+   <br>
+   <b>Zink A</b> and Rose S (2021). Identifying Undercompensated Groups Defined by Multiple Attributes in Risk Adjustment. BMJ Health & Care Informatics 28(1). <br>
+   <br>
+McGuire T,<b> Zink A </b>, Rose S (2021). Improving the Performance of Risk Adjustment Systems: Constrained Regressions, Reinsurance, and Variable Selection. Forthcoming in American Journal of Health Economics. <br>
+   <br>
+<b>Zink A </b> and Rose S (2020). Fair Regression for Health Care Spending. Biometrics 76(3): 973-982. <br>
+   <br>
+Barnett ML Gray J, <b>Zink A</b> and Jena AB (2017). Coupling Policymaking with Evaluation — The Case of the Opioid Crisis. New England Journal of Medicine 377: 2306-2309.  
 </p>
 
 							</article>
