try to fix error in unmatch p tags

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@ McGuire T,<b> Zink A </b>, Rose S (2021). Improving the Performance of Risk Adju
    <br>
 <b>Zink A </b> and Rose S (2020). Fair Regression for Health Care Spending. Biometrics 76(3): 973-982. <br>
    <br>
-Barnett ML Gray J, <b>Zink A</b> and Jena AB (2017). Coupling Policymaking with Evaluation — The Case of the Opioid Crisis. New England Journal of Medicine 377: 2306-2309.  <br>
+Barnett ML Gray J, <b>Zink A</b> and Jena AB (2017). Coupling Policymaking with Evaluation — The Case of the Opioid Crisis. New England Journal of Medicine 377: 2306-2309.  <br></p>
 <br>
 <p><b>Works in Progress</b></p>
-Smart Plan Defaults for Low-Income Subsidy Recipients in Medicare Part D<br></p>
+<p>Smart Plan Defaults for Low-Income Subsidy Recipients in Medicare Part D<br></p>
 							</article>
 
 						<!-- CV -->
