--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<!-- <span class="image main"><img src="images/pic01.jpg" alt="" /></span> -->
-								<p>I am interested in algorithmic bias in healthcare and other health policy questions. Check out my <a href="#research">research</a>.<br>
-<br>
-After receiving my PhD in Health Policy from Harvard University, I joined Chicago Booth's Center for Applied AI to work on their algorithmic bias initiative and other projects in their health care portfolio. Before graduate school, I spent time working as an analyst at various companies where I got to work with many kinds of data from Electronic Health Records to clinical trials to Medicare clams data to help answer a variety of research topics from the impact of Medicaid Expansion on primary care practices to developing methods for Medicare Fraud, Waste, and Abuse. </p>
+								<p>I am interested in algorithmic bias in healthcare and other health policy questions. Check out my <a href="#research">research</a>.<br></p>
 							</article>
 
 						<!-- Research -->
@@ -71,7 +69,7 @@ McGuire T,<b> Zink A </b>, Rose S (2021). Improving the Performance of Risk Adju
 Barnett ML Gray J, <b>Zink A</b> and Jena AB (2017). Coupling Policymaking with Evaluation — The Case of the Opioid Crisis. New England Journal of Medicine 377: 2306-2309.  <br></p>
 <br>
 <p><b>Works in Progress</b></p>
-<p>Smart Plan Defaults for Low-Income Subsidy Recipients in Medicare Part D<br></p>
+<p>Smart Plan Defaults for Low-Income Subsidy Recipients in Medicare Part D.<br></p>
 							</article>
 
 						<!-- CV -->
