adding cv, removing contact

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 								<h1>Anna Zink</h1>
 								<p>Principal Researcher <br>
 								Center for Applied AI <br>
-								University of Chicago </p>
+  								University of Chicago </p>
 							</div>
 						</div>
 						<nav>
@@ -36,8 +36,7 @@
 								<li><a href="#about">About</a></li>
 								<li><a href="#research">Research</a></li>
 								<li><a href="#cv">CV</a></li>
-								<li><a href="#contact">Contact</a></li>
-								<!--<li><a href="#elements">Elements</a></li>-->
+								<!--<li><a href="#contact">Contact</a></li>-->								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
 					</header>
@@ -53,7 +52,7 @@
 
 I'm currently a principal researcher at Chicago Booth's Center for Applied AI where I work on their <a href="https://www.chicagobooth.edu/research/center-for-applied-artificial-intelligence/research/algorithmic-bias">Algorithmic Bias Initiative</a> along with other health-related projects. I am interested in the possibilities (and pitfalls) of machine learning techniques to evaluate and improve decision making in health care and insurance design. Check out my <a href="#research">research</a>.<br>
 <br>
-I received my PhD in Health Policy and a secondary degree in Computational Science & Engineering from Harvard University. Prior to graduate school, I worked as an analyst for several companies where I had the opportunity to work with different types of health care data to answer a variety of research topics, from identifying Medicare fraud, waste, and abuse to measuring the impact of Medicaid expansion on primary care practices. 
+I received my PhD in Health Policy and a secondary degree in Computational Science & Engineering from Harvard University. Prior to graduate school, I worked as an analyst for several companies where I had the opportunity to work with different types of health care data on a variety of research topics, from identifying Medicare fraud, waste, and abuse to measuring the impact of Medicaid expansion on primary care practices. 
 </p>							</article>
 
 						<!-- Research -->
@@ -61,14 +60,14 @@ I received my PhD in Health Policy and a secondary degree in Computational Scien
 								<h2 class="major">Research</h2>
 								<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
 <p><b>Selected Publications</b></p>
-<p>Neprash HT, <b>Zink A</b>, Sheridan B, Hempstead K (2021). The Effect of Medicaid Expansion on Medicaid
-	Participation, Payer Mix, and Labor Supply in Primary Care. Journal of Health Economics 80: 102541. <br>
-   <br>
    <b>Zink A</b> and Rose S (2021). Identifying Undercompensated Groups Defined by Multiple Attributes in Risk Adjustment. BMJ Health & Care Informatics 28(1). <br>
    <br>
 McGuire T,<b> Zink A </b>, Rose S (2021). Improving the Performance of Risk Adjustment Systems: Constrained Regressions, Reinsurance, and Variable Selection. Forthcoming in American Journal of Health Economics. <br>
    <br>
 <b>Zink A </b> and Rose S (2020). Fair Regression for Health Care Spending. Biometrics 76(3): 973-982. <br>
+   <br>
+<p>Neprash HT, <b>Zink A</b>, Sheridan B, Hempstead K (2021). The Effect of Medicaid Expansion on Medicaid
+	Participation, Payer Mix, and Labor Supply in Primary Care. Journal of Health Economics 80: 102541. <br>
    <br>
 Barnett ML Gray J, <b>Zink A</b> and Jena AB (2017). Coupling Policymaking with Evaluation — The Case of the Opioid Crisis. New England Journal of Medicine 377: 2306-2309.  <br></p>
 <br>
@@ -80,39 +79,10 @@ Barnett ML Gray J, <b>Zink A</b> and Jena AB (2017). Coupling Policymaking with 
 							<article id="cv">
 								<h2 class="major">CV</h2>
 								<!-- <span class="image main"><img src="images/pic03.jpg" alt="" /></span> -->
-								<p>Insert cv.</p>
+
+<p> <a href="./docs/cv_zink_aug_2022.pdf">CV</a></p>
 							</article>
 
-						<!-- Contact -->
-							<article id="contact">
-								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
-								<!-- <ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								</ul> -->
-							</article>
 
 						<!-- Elements -->
 							<article id="elements">
@@ -360,7 +330,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Anna Zink. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
