--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<!-- <div class="logo"> -->
 							<!--- <span class="icon fa-gem"></span> --->
 						<!-- </div> -->
-						<span class="image main"><img src="images/pic.jpg" alt="" /> </span>
+						 <span class="image main"><img src="images/pic.jpg" alt=""width="200" height="240" /> </span>
 						<div class="content">
 							<div class="inner">
 								<h1>Anna Zink</h1>
