try resizing again

--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
 						<!-- <div class="logo"> -->
 							<!--- <span class="icon fa-gem"></span> --->
 						<!-- </div> -->
-						 <span class="image main"><img src="images/pic.jpg" alt=""width="200" height="240" /> </span>
 						<div class="content">
 							<div class="inner">
-								<h1>Anna Zink</h1>
+								
+						 <img src="images/pic.jpg" alt=""width="200" height="240" /> 
+<h1>Anna Zink</h1>
 								<p>Principal Researcher <br>
 								Center for Applied AI <br>
   								University of Chicago </p>
