--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								
-						 <img src="images/pic.jpg" alt=""width="200" height="240" /> 
+						<!--  <img src="images/pic.jpg" alt=""width="200" height="240" /> -->
 <h1>Anna Zink</h1>
 								<p>Principal Researcher <br>
 								Center for Applied AI <br>
