--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 						<div class="content">
 							<div class="inner">
 								
-						<!--  <img src="images/pic.jpg" alt=""width="200" height="240" /> -->
+						<img src="images/pic.jpg" alt=""width="180" height="180" /> 
 <h1>Anna Zink</h1>
-								<p>Principal Researcher <br>
-								Center for Applied AI <br>
-  								University of Chicago </p>
+								<p>Principal Researcher </p><br>
+								<p> Center for Applied AI </p><br>
+  								<p>University of Chicago </p>
 							</div>
 						</div>
 						<nav>
