--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 								
 						<img src="images/pic.jpg" alt=""width="180" height="180" /> 
 <h1>Anna Zink</h1>
-								<p>Principal Researcher </p><br>
-								<p> Center for Applied AI </p><br>
-  								<p>University of Chicago </p>
+								<p>Principal Researcher <br>
+								   Center for Applied AI<br>
+  								   University of Chicago </p>
 							</div>
 						</div>
 						<nav>
