--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 				<!-- Header -->
 					<header id="header">
 						<!-- <div class="logo"> -->
-							<!--- <span class="icon fa-gem"></span> --->
+						<!-- <span class="icon fa-gem"></span> -->
 						<!-- </div> -->
 						<div class="content">
 							<div class="inner">
 								
-						<img src="images/pic.jpg" alt=""width="180" height="180" /> 
+						<img src="images/pic.jpg" alt="" width="180" height="180" /> 
 <h1>Anna Zink</h1>
 								<p>Principal Researcher <br>
 								   Center for Applied AI<br>
