try fixing break issue on resizing

--- a/index.html
+++ b/index.html
@@ -25,13 +25,15 @@
 						<div class="content">
 							<div class="inner">
 								
-						<img src="images/pic.jpg" alt="" width="180" height="180" /> 
-<h1>Anna Zink</h1>
-								<p>Principal Researcher <br>
-								   Center for Applied AI<br>
-  								   University of Chicago </p>
+							<img src="images/pic.jpg" alt="" width="180" height="180" /> 
+							<h1>Anna Zink</h1>
+								   <div style="white-space: pre">
+ 								   Principal Researcher
+								   Center for Applied AI
+  								   University of Chicago 
+								   </div>
 							</div>
-			</div>
+						</div>
 						<nav>
 							<ul>
 								<li><a href="#about">About</a></li>
