--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 								
 							<img src="images/pic.jpg" alt="" width="180" height="180" /> 
 							<h1>Anna Zink</h1>
-								   <div style="white-space: pre">
+								   <div class="align-center" style="white-space: pre">
  								   Principal Researcher
 								   Center for Applied AI
   								   University of Chicago 
