--- a/index.html
+++ b/index.html
@@ -27,11 +27,9 @@
 								
 							<img src="images/pic.jpg" alt="" width="180" height="180" /> 
 							<h1>Anna Zink</h1>
-								   <div class="align-center" style="white-space: pre">
- 								   Principal Researcher
-								   Center for Applied AI
-  								   University of Chicago 
-								   </div>
+ 							<h6>Principal Researcher</h6>
+							<h6>Center for Applied AI</h6>
+  							<h6>University of Chicago</h6> 
 							</div>
 						</div>
 						<nav>
