--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								<!-- <span class="image main"><img src="images/pic01.jpg" alt="" /></span> -->
 								<p>
 
-I'm currently a principal researcher at Chicago Booth's Center for Applied AI where I work on their <a href="https://www.chicagobooth.edu/research/center-for-applied-artificial-intelligence/research/algorithmic-bias">Algorithmic Bias Initiative</a> along with other health-related projects. I am interested in the possibilities (and pitfalls) of machine learning techniques to evaluate and improve decision making in health care and insurance design. Check out my <a href="#research">research</a>.<br>
+I'm currently a principal researcher at Chicago Booth's Center for Applied AI where I work on its <a href="https://www.chicagobooth.edu/research/center-for-applied-artificial-intelligence/research/algorithmic-bias">Algorithmic Bias Initiative</a> along with other health-related projects. I am interested in the possibilities (and pitfalls) of machine learning techniques to evaluate and improve decision making in health care and insurance design. Check out my <a href="#research">research</a>.<br>
 <br>
 I received my PhD in Health Policy and a secondary degree in Computational Science & Engineering from Harvard University. Prior to graduate school, I worked as an analyst for several companies where I had the opportunity to work with different types of health care data on a variety of research topics, from identifying Medicare fraud, waste, and abuse to measuring the impact of Medicaid expansion on primary care practices. 
 </p>							</article>
