add text to landing page

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
  							<h6>Principal Researcher</h6>
 							<h6>Center for Applied AI</h6>
   							<h6>University of Chicago</h6> 
+								<p>
+I'm currently a principal researcher at Chicago Booth's Center for Applied AI where I work on its <a href="https://www.chicagobooth.edu/research/center-for-applied-artificial-intelligence/research/algorithmic-bias">Algorithmic Bias Initiative</a> along with other health-related projects. I am interested in the possibilities (and pitfalls) of machine learning techniques to evaluate and improve decision making in health care and insurance design. Check out my <a href="#research">research</a>.<br>
+								</p>
 							</div>
 						</div>
 						<nav>
