--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Barnett ML Gray J, <b>Zink A</b> and Jena AB (2017). Coupling Policymaking with 
 								<h2 class="major">CV</h2>
 								<!-- <span class="image main"><img src="images/pic03.jpg" alt="" /></span> -->
 
-<p> <a href="./docs/cv_zink_aug_2022.pdf">CV</a></p>
+<p> <a href="./docs/cv_zink_July_2023.pdf">CV</a></p>
 							</article>
 
 
