--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ I'm a Principal Researcher at Chicago Booth's Center for Applied AI. I work on t
 							<ul>
 								<li><a href="#about">About</a></li>
 								<li><a href="#research">Research</a></li>
-								<li><a href="./docs/cv_zink_aug_2022.pdf">CV</a></li>
+								<li><a href="./docs/cv_zink_July_2023.pdf">CV</a></li>
 								<!--<li><a href="#contact">Contact</a></li>-->								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
