--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>Anna Zink</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+                <meta name="google-site-verification" content="aeTwIri_DwzZIlMBdZFNr16m07gVxzgpDkwy7yNmgLQ" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
