--- a/index.html
+++ b/index.html
@@ -64,6 +64,20 @@ I received my PhD in Health Policy and a secondary degree in Computational Scien
 							<article id="research">
 								<h2 class="major">Research</h2>
 								<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
+
+<p><b>Works in Progress</b></p>
+
+   <b>Zink A</b>, Obermeyer Z, Pierson E. Race Corrections in Clinical Models: Examining Family History and Cancer Risk <br>
+   <br>
+
+
+   Carey MC, <b>Zink A</b>, et al. Mitigating Bias and Advancing Health Equity in the Development, Evaluation, and Deployment of Clinical Algorithms in Health Care: A Scoping Review and Implications for Policy<br>
+  <br>
+
+   <b>Zink A</b>, Boone C, Maddox KJ, Chernew M, Neprash H. Artificial Intelligence in Medicare: Utilization, Spending, and Access to Medicare-Covered AI-Enabled Clinical Software <br>
+   <br>
+
+
 <p><b>Selected Publications</b></p>
    <b>Zink A</b> and Rose S (2021). Identifying Undercompensated Groups Defined by Multiple Attributes in Risk Adjustment. BMJ Health & Care Informatics 28(1). <br>
    <br>
