update typo in research tab & cv

--- a/index.html
+++ b/index.html
@@ -70,12 +70,11 @@ I received my PhD in Health Policy and a secondary degree in Computational Scien
    <b>Zink A</b>, Obermeyer Z, Pierson E. Race Corrections in Clinical Models: Examining Family History and Cancer Risk <br>
    <br>
 
-
-   Carey MC, <b>Zink A</b>, et al. Mitigating Bias and Advancing Health Equity in the Development, Evaluation, and Deployment of Clinical Algorithms in Health Care: A Scoping Review and Implications for Policy<br>
-  <br>
-
    <b>Zink A</b>, Boone C, Maddox KJ, Chernew M, Neprash H. Artificial Intelligence in Medicare: Utilization, Spending, and Access to Medicare-Covered AI-Enabled Clinical Software <br>
    <br>
+ 
+   Cary MC, <b>Zink A</b>, et al. Mitigating Bias and Advancing Health Equity in the Development, Evaluation, and Deployment of Clinical Algorithms in Health Care: A Scoping Review and Implications for Policy<br>
+  <br>
 
 
 <p><b>Selected Publications</b></p>
