--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@ I received my PhD in Health Policy and a secondary degree in Computational Scien
    <b>Zink A</b>, Obermeyer Z, Pierson E. Race Corrections in Clinical Models: Examining Family History and Cancer Risk <br>
    <br>
 
-   <b>Zink A</b>, Boone C, Maddox KJ, Chernew M, Neprash H. Artificial Intelligence in Medicare: Utilization, Spending, and Access to Medicare-Covered AI-Enabled Clinical Software <br>
+   <b>Zink A</b>, Boone C, Maddox KJ, Chernew M, Neprash HT. Artificial Intelligence in Medicare: Utilization, Spending, and Access to Medicare-Covered AI-Enabled Clinical Software <br>
    <br>
  
-   Cary MC, <b>Zink A</b>, et al. Mitigating Bias and Advancing Health Equity in the Development, Evaluation, and Deployment of Clinical Algorithms in Health Care: A Scoping Review and Implications for Policy<br>
+   Cary MP Jr., <b>Zink A</b>, et al. Mitigating Racial and Ethnic Bias and Advancing Health Equity in Clinical Algorithms in Health Care: A Scoping Review. Accepted by Health Affairs on August 14, 2023.<br>
   <br>
 
 
@@ -88,8 +88,6 @@ McGuire T,<b> Zink A </b>, Rose S (2021). Improving the Performance of Risk Adju
 	Participation, Payer Mix, and Labor Supply in Primary Care. Journal of Health Economics 80: 102541. <br>
    <br>
 Barnett ML Gray J, <b>Zink A</b> and Jena AB (2017). Coupling Policymaking with Evaluation — The Case of the Opioid Crisis. New England Journal of Medicine 377: 2306-2309.  <br></p>
-<p><b>Works in Progress</b></p>
-<p>Smart Plan Defaults for Low-Income Subsidy Recipients in Medicare Part D.<br></p>
 							</article>
 
 						<!-- CV -->
