updating cv and research page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ I'm a Principal Researcher at Chicago Booth's Center for Applied AI. I work on t
 							<ul>
 								<li><a href="#about">About</a></li>
 								<li><a href="#research">Research</a></li>
-								<li><a href="./docs/cv_zink_July_2023.pdf">CV</a></li>
+								<li><a href="./docs/cv_zink_current.pdf">CV</a></li>
 								<!--<li><a href="#contact">Contact</a></li>-->								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -70,14 +70,12 @@ I received my PhD in Health Policy and a secondary degree in Computational Scien
    <b>Zink A</b>, Obermeyer Z, Pierson E. Race Corrections in Clinical Models: Examining Family History and Cancer Risk <br>
    <br>
 
-   <b>Zink A</b>, Boone C, Maddox KJ, Chernew M, Neprash HT. Artificial Intelligence in Medicare: Utilization, Spending, and Access to Medicare-Covered AI-Enabled Clinical Software <br>
-   <br>
- 
-   Cary MP Jr., <b>Zink A</b>, et al. Mitigating Racial and Ethnic Bias and Advancing Health Equity in Clinical Algorithms in Health Care: A Scoping Review. Accepted by Health Affairs on August 14, 2023.<br>
-  <br>
-
-
 <p><b>Selected Publications</b></p>
+
+   <b>Zink A</b>, Boone C, Maddox KJ, Chernew M, Neprash HT. (2024). Artificial Intelligence in Medicare: Utilization, Spending, and Access to Medicare-Covered AI-Enabled Clinical Software. Forthcoming in The American Journal of Managed Care. <br>   
+<br>
+   Cary MP Jr., <b>Zink A</b>, et al. (2023). Mitigating Racial and Ethnic Bias and Advancing Health Equity in Clinical Algorithms: A Scoping Review. Health Affairs 42(10). <br>
+  <br>
    <b>Zink A</b> and Rose S (2021). Identifying Undercompensated Groups Defined by Multiple Attributes in Risk Adjustment. BMJ Health & Care Informatics 28(1). <br>
    <br>
 McGuire T,<b> Zink A </b>, Rose S (2021). Improving the Performance of Risk Adjustment Systems: Constrained Regressions, Reinsurance, and Variable Selection. Forthcoming in American Journal of Health Economics. <br>
