update cv and research page

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@ I received my PhD in Health Policy and a secondary degree in Computational Scien
 
 <p><b>Selected Publications</b></p>
 
-   <b>Zink A</b>, Boone C, Maddox KJ, Chernew M, Neprash HT. (2024). Artificial Intelligence in Medicare: Utilization, Spending, and Access to Medicare-Covered AI-Enabled Clinical Software. Forthcoming in The American Journal of Managed Care. <br>   
+   <b>Zink A</b>, Chernew M, Neprash HT. (2024). How Should Medicare Pay for Artficial Intelligence? JAMA Internal Medicine May. 
+<br>
+   <b>Zink A</b>, Boone C, Maddox KJ, Chernew M, Neprash HT. (2024). Artificial Intelligence in Medicare: Utilization, Spending, and Access to Medicare-Covered AI-Enabled Clinical Software. The American Journal of Managed Care. <br>   
 <br>
    Cary MP Jr., <b>Zink A</b>, et al. (2023). Mitigating Racial and Ethnic Bias and Advancing Health Equity in Clinical Algorithms: A Scoping Review. Health Affairs 42(10). <br>
   <br>
