--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ I received my PhD in Health Policy and a secondary degree in Computational Scien
 
 <p><b>Selected Publications</b></p>
 
-   <b>Zink A</b>, Chernew M, Neprash HT. (2024). How Should Medicare Pay for Artficial Intelligence? JAMA Internal Medicine May. 
+   <b>Zink A</b>, Chernew M, Neprash HT. (2024). How Should Medicare Pay for Artficial Intelligence? JAMA Internal Medicine May. <br>
 <br>
    <b>Zink A</b>, Boone C, Maddox KJ, Chernew M, Neprash HT. (2024). Artificial Intelligence in Medicare: Utilization, Spending, and Access to Medicare-Covered AI-Enabled Clinical Software. The American Journal of Managed Care. <br>   
 <br>
