fix another typo

--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@ I received my PhD in Health Policy and a secondary degree in Computational Scien
 								<h2 class="major">Research</h2>
 								<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
 
-<p><b>Works in Progress</b></p>
+<p><b>Work in Progress</b></p>
 
-   <b>Zink A</b>, Obermeyer Z, Pierson E. Race Corrections in Clinical Models: Examining Family History and Cancer Risk <br>
+   <b>Zink A</b>, Obermeyer Z, Pierson E. Race Corrections in Clinical Models: Examining Family History and Cancer Risk <br.>
    <br>
 
 <p><b>Selected Publications</b></p>
 
-   <b>Zink A</b>, Chernew M, Neprash HT. (2024). How Should Medicare Pay for Artficial Intelligence? JAMA Internal Medicine May. <br>
+   <b>Zink A</b>, Chernew M, Neprash HT. (2024). How Should Medicare Pay for Artficial Intelligence? JAMA Internal Medicine. <br>
 <br>
    <b>Zink A</b>, Boone C, Maddox KJ, Chernew M, Neprash HT. (2024). Artificial Intelligence in Medicare: Utilization, Spending, and Access to Medicare-Covered AI-Enabled Clinical Software. The American Journal of Managed Care. <br>   
 <br>
