updating photo and editing research page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<div class="content">
 							<div class="inner">
 								
-							<img src="images/head_shot.jpg" alt="" width="180" height="180" /> 
+							<img src="images/head_shot_test.jpg" alt="" width="180" height="180" /> 
 							<h1>Anna Zink</h1>
  							<!-- <h6>Principal Researcher</h6>
 							<h6>Center for Applied AI</h6>
@@ -67,10 +67,16 @@ I received my PhD in Health Policy and a secondary degree in Computational Scien
 
 <p><b>Work in Progress</b></p>
 
-   <b>Zink A</b>, Obermeyer Z, Pierson E. Race Corrections in Clinical Models: Examining Family History and Cancer Risk <br.>
+   <b>Zink A</b>, Lou H, Chen I. Evaluating and Improving Clinical Risk Prediction Models for Patients with Lower Access to Care <br>
+   <br>
+
+   <b>Zink A</b>, Chernew M, Neprash H. The Effect of AI-Enabled Clinical Software on Health Care Spending and Health Outcomes <br>
    <br>
 
 <p><b>Selected Publications</b></p>
+
+   <b>Zink A</b>, Obermeyer Z, Pierson E. Race Adjustments in Clinical Algorithms Can Help Correct for Racial Disparities in Data Quality. PNAS.<br>
+   <br>
 
    <b>Zink A</b>, Chernew M, Neprash HT. (2024). How Should Medicare Pay for Artficial Intelligence? JAMA Internal Medicine. <br>
 <br>
