--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<div class="content">
 							<div class="inner">
 								
-							<img src="images/head_shot_test.jpg" alt="" width="180" height="180" /> 
+							<img src="images/head_shot_test.jpg" alt="" width=200" height="300" /> 
 							<h1>Anna Zink</h1>
  							<!-- <h6>Principal Researcher</h6>
 							<h6>Center for Applied AI</h6>
