--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<h6>Center for Applied AI</h6>
   							<h6>University of Chicago</h6> --> 
 								<p>
-I'm a Principal Researcher at Chicago Booth's Center for Applied AI. I work on the <a href="https://www.chicagobooth.edu/research/center-for-applied-artificial-intelligence/research/algorithmic-bias">Algorithmic Bias Initiative</a> along with other health-related projects. I am interested in the possibilities (and pitfalls) of machine learning techniques to evaluate and improve decision making in health care and insurance design. Check out my <a href="#research">research</a>.<br>
+I'm a Principal Researcher at Chicago Booth's Center for Applied AI. This August I will be starting as an Assistant Professor in the Department of Community Health at Tufts University. I am interested in the possibilities (and pitfalls) of artificial intelligence and machine learning techniques to evaluate and improve decision making in health care and insurance design. Check out my <a href="#research">research</a>.<br>
 								</p>
 							</div>
 						</div>
