update landing page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<h6>Center for Applied AI</h6>
   							<h6>University of Chicago</h6> --> 
 								<p>
-I'm a Principal Researcher at Chicago Booth's Center for Applied AI. This August I will be starting as an Assistant Professor in the Department of Community Health at Tufts University. I am interested in the possibilities (and pitfalls) of artificial intelligence and machine learning techniques to evaluate and improve decision making in health care and insurance design. Check out my <a href="#research">research</a>.<br>
+I'm an Assistant Professor in the Department of Community Health at Tufts University. I am interested in the possibilities (and pitfalls) of artificial intelligence and machine learning techniques to evaluate and improve decision making in health care and insurance design. Check out my <a href="#research">research</a>.<br>
 								</p>
 							</div>
 						</div>
@@ -78,7 +78,7 @@ I received my PhD in Health Policy and a secondary degree in Computational Scien
    <b>Zink A</b>, Obermeyer Z, Pierson E. Race Adjustments in Clinical Algorithms Can Help Correct for Racial Disparities in Data Quality. PNAS.<br>
    <br>
 
-   <b>Zink A</b>, Chernew M, Neprash HT. (2024). How Should Medicare Pay for Artficial Intelligence? JAMA Internal Medicine. <br>
+   <b>Zink A</b>, Chernew M, Neprash HT. (2024). How Should Medicare Pay for Artificial Intelligence? JAMA Internal Medicine. <br>
 <br>
    <b>Zink A</b>, Boone C, Maddox KJ, Chernew M, Neprash HT. (2024). Artificial Intelligence in Medicare: Utilization, Spending, and Access to Medicare-Covered AI-Enabled Clinical Software. The American Journal of Managed Care. <br>   
 <br>
