update research page & resume

--- a/index.html
+++ b/index.html
@@ -67,15 +67,18 @@ I received my PhD in Health Policy and a secondary degree in Computational Scien
 
 <p><b>Work in Progress</b></p>
 
-   <b>Zink A</b>, Lou H, Chen I. Evaluating and Improving Clinical Risk Prediction Models for Patients with Lower Access to Care <br>
-   <br>
-
-   <b>Zink A</b>, Chernew M, Neprash H. The Effect of AI-Enabled Clinical Software on Health Care Spending and Health Outcomes <br>
+   Knecht J, <b>Zink A</b>, Kolstad J, Peterson M. Deep Causal Behavioral Policy Learning: Applications in Healthcare. https://arxiv.org/abs/2503.03724. <br>
    <br>
 
 <p><b>Selected Publications</b></p>
 
-   <b>Zink A</b>, Obermeyer Z, Pierson E. Race Adjustments in Clinical Algorithms Can Help Correct for Racial Disparities in Data Quality. PNAS.<br>
+   <b>Zink A</b>, Chernew M, Neprash HT. (2026). Practice Pattern Changes After Adoption of Diagnostic AI Tool Used in Conjunction with Cardiac Imaging. forthcoming Health Affairs. <br>
+   <br>
+
+   <b>Zink A</b>, Lou H, Chen I. (2026). Access to Care Affects Electronic Health Record Reliability and AI-driven Disease Prediction. Nature Health.<br>
+   <br>
+
+   <b>Zink A</b>, Obermeyer Z, Pierson E. (2024). Race Adjustments in Clinical Algorithms Can Help Correct for Racial Disparities in Data Quality. PNAS.<br>
    <br>
 
    <b>Zink A</b>, Chernew M, Neprash HT. (2024). How Should Medicare Pay for Artificial Intelligence? JAMA Internal Medicine. <br>
